home-cluster/dashboard/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: home-dashboard
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.homarr.local.solonsstuff.com`)
      kind: Rule
      services:
        - name: homarr-service
          port: 80
    - match: Host(`homarr.local.solonsstuff.com`)
      kind: Rule
      services:
        - name: homarr-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-solonsstuff-com-staging-tls
